<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Wobble</string>
    <string name="action_settings">Settings</string>
    <string name="details_alarm_name">Alarm name</string>
    <string name="details_alarm_tone">Tone</string>
    <string name="details_alarm_tone_default">Choose Tone</string>
    <string name="done" translatable="false">Done</string>
    <string name="cancel">Cancel</string>
    <string name="wakeup_info">After the alarm is dismissed, a test will check if you\'re awake or not. Alarm fires again if there is no response for 3 minutes. The default duration is 10 minutes.</string>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="HOURS">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> minutes"</string>
    <string name="seconds">"<xliff:g id="SECONDS">%02d</xliff:g> seconds"</string>
    <string-array name="alarm_toast_set">
        <item>Alarm set for less than 1 minute from now</item>
        <item>Alarm set for <xliff:g example="3 days" id="DAYS">%1$s</xliff:g> from now</item>
        <item>Alarm set for <xliff:g example="3 hours" id="HOURS">%2$s</xliff:g> from now</item>
        <item>Alarm set for <xliff:g example="3 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now</item>
        <item>Alarm set for <xliff:g example="3 minutes" id="MINUTES">%3$s</xliff:g> from now</item>
        <item>Alarm set for <xliff:g example="3 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now</item>
        <item>Alarm set for <xliff:g example="3 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now</item>
        <item>Alarm set for <xliff:g example="3 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now</item>
    </string-array>
    <string name="banner_ad_id" translatable="false">ca-app-pub-8167376929579266~2640723671</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8167376929579266/2010168284</string>
    <string name="Sunday" translatable="false">Sunday</string>
    <string name="Monday" translatable="false">Monday</string>
    <string name="Tuesday" translatable="false">Tuesday</string>
    <string name="Wednesday" translatable="false">Wednesday</string>
    <string name="Thursday" translatable="false">Thursday</string>
    <string name="Friday" translatable="false">Friday</string>
    <string name="Saturday" translatable="false">Saturday</string>
    <string name="app_credits">Credits</string>
    <string name="app_licenses">Open source licenses</string>
    <string name="app_version">"Version: "<xliff:g id="version">%s</xliff:g></string>
    <string name="rate_app">Rate the app</string>
    <string name="share_app">Share the app</string>
    <string name="contact_developer">Contact the developer</string>
    <string name="empty_alarm_message_1">No alarms</string>
    <string name="new_alarm_desc">Add new alarm</string>
    <string name="default_time" translatable="false">00:00</string>
    <string name="short_sunday" translatable="false">Sun</string>
    <string name="short_monday" translatable="false">Mon</string>
    <string name="short_tuesday" translatable="false">Tue</string>
    <string name="short_wednesday" translatable="false">Wed</string>
    <string name="short_thursday" translatable="false">Thu</string>
    <string name="short_friday" translatable="false">Fri</string>
    <string name="short_saturday" translatable="false">Sat</string>
    <string name="one_time_alarm">Today</string>
    <string name="alarm_snooze">Snooze</string>
    <string name="panel_dismiss_message">Swipe up to dismiss</string>
    <string name="alarm_dismiss">Dismiss</string>
    <string name="text_am" translatable="false">am</string>
    <string name="alarm_item_name_default">Alarm</string>
    <string name="good_morning">Good Morning!</string>
    <string name="good_evening">Good Evening!</string>
    <string name="app_rater_message">We help you wake up at the right time!</string>
    <string name="app_rater_question">Is this worth a 5 star rating?</string>
    <string name="app_rater_button">Rate 5 Stars</string>
    <string name="switch_clock_desc">Switch Clock</string>
    <string name="default_date" translatable="false">01</string>
    <string name="default_month" translatable="false">January</string>
    <string name="default_day">Wednesday</string>
    <string name="default_hour" translatable="false">00</string>
    <string name="default_min" translatable="false">00</string>
    <string name="default_sec" translatable="false">00</string>
    <string name="default_lap">Lap 1</string>
    <string name="default_lap_time" translatable="false">00:00:00.000</string>
    <string name="theme_change">Change Theme</string>
    <string name="menu_desc">Menu</string>
    <string name="default_math_question" translatable="false">71 % 65</string>
    <string name="clear_previous">Clear</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="zero" translatable="false">0</string>
    <string name="math_back_button_desc">Go back to alarm screen</string>
    <string name="math_done_button_desc">Check if answer is right</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="lap">Lap</string>
    <string name="lap_empty_message">No current laps</string>
    <string name="text_hours">Hours</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_seconds">Seconds</string>
    <string name="wake_up_desc">Wake Up Test Info</string>
    <string name="problem_difficulty">Problem should be</string>
    <string name="days_repeat">Repeat</string>
    <string name="wake_up_helpers">Wake-up helpers</string>
    <string name="wake_text">Checking if you\'re awake</string>
    <string name="wake_instruction">Press the button below</string>
    <string name="wake_button_text">Yeah, sure</string>
    <string name="image_theme_desc">App theme</string>
    <string name="theme">Theme</string>
    <string name="default_timer_text">Timer</string>
    <string name="timer_set_time">Set timer</string>
    <string name="timer_set_label">Set label</string>
    <string name="default_millisec" translatable="false">000</string>
    <string name="preference_category_alarm">Alarm</string>
    <string name="preference_category_timer">Timer and Stopwatch</string>
    <string name="preference_category_other">Other</string>
    <string name="pref_auto_dismiss_dialog_title">Auto dismiss after</string>
    <string name="pref_auto_dismiss_title">Auto dismiss alarm after</string>
    <string name="pref_snooze_title">Snooze duration</string>
    <string name="pref_snooze_dialog_title">Select snooze duration</string>
    <string name="pref_wakeup_title">Check if I\'m awake after</string>
    <string name="pref_wakeup_dialog_title">Select Wake Up check duration</string>
    <string name="pref_volume_key_title">Volume keys</string>
    <string name="details_vibration_title">Vibration</string>
    <string name="pref_silent_title">Play in silent mode</string>
    <string name="pref_silent_summary">Alarm will trigger even in silent state</string>
    <string name="pref_increasing_vol_title">Gradually increase volume</string>
    <string name="pref_timer_alert_title">Timer completion alert</string>
    <string name="pref_sound_title">Sound effects</string>
    <string name="pref_about_title">About</string>
    <string name="default_theme">Rainy Day</string>
    <string name="no_file_manager">There is no file manager installed on your device. Please install one.</string>
    <string name="item_owned">Ads already removed</string>
    <string name="enable_google_play">Please enable/install Google Play Services</string>
    <string name="menu_alarm_edit">Edit</string>
    <string name="menu_alarm_delete">Delete</string>
    <string name="menu_ads">Remove ads</string>
    <string name="wakeup_info_title">Wake Up Check</string>
    <string name="pref_screen_on">Keep screen on</string>
    <string name="credits_design">Design &amp; Development</string>
    <string name="developer_name">Piyush Shrivastava</string>
    <string name="credits_sound">Sound</string>
    <string name="default_maximum">Maximum</string>
    <string name="credits_sound_1">Kwahmah_02 - Freesound</string>
    <string name="credits_sound_2">MeTwo99 - Freesound</string>
    <string name="credits_sound_3">Mike Koenig - SoundBible</string>
    <string name="credits_backgrounds">Backgrounds</string>
    <string name="credits_background_1">Pixabay</string>
    <string name="credits_background_2">Rounded Hexagon</string>
    <string name="credits_background_3">Techandall</string>
    <string name="credits_background_4">Elegantthemes</string>
    <string name="credits_background_5">Obsidian Dawn</string>
    <string name="pref_alarm_volume">Alarm Volume</string>
    <string name="credits_icon">Icons</string>
    <string name="credits_icon_iconmonster">Iconmonster</string>
    <string name="pref_increasing_vol_dialog">Time to reach maximum volume</string>
    <string name="alarm_replicate">Replicate</string>
    <string name="pref_timer_volume">Timer Volume</string>
    <string name="night_mode">Night Mode</string>
    <string name="default_animations">Animations and gestures</string>
    <string name="default_select_all">Select all</string>
    <string name="pref_voice_alert">Voice Alert</string>
    <string name="after_time">After time</string>
    <string name="before_time">Before time</string>
    <string name="after_dismiss">After dismissing alarm</string>
    <string name="after_snoozing">After snoozing alarm</string>
    <string name="replace_time">Say this instead of time</string>
    <string name="say_message">Say message:</string>
    <string name="alarm_background">Alarm Background</string>
    <string name="voice_alert_warning">Make sure that voice alert is enabled in settings</string>
    <string name="pref_alert_volume">Voice Alert Volume</string>
    <string name="default_off">Off</string>
    <string name="pref_night_summary">Dim display</string>
    <string name="pref_clock_style">Clock Style</string>
    <string name="pref_digital_font">Digital Clock font</string>
    <string name="skip_next">Skip next</string>
    <string name="unskip">Undo skip</string>
    <string name="skip_check">Skip check</string>
    <string name="pref_language">Language</string>
    <string name="background">Background</string>
    <string name="pref_brightness">Gradually increase brightness</string>
    <string name="pref_brightness_dialog">Time to reach maximum brightness</string>
    <string name="pref_upcoming_notif">Upcoming alarm notifications</string>
    <string name="blur_level">Blur level</string>
    <string name="blur_bg">Blur Background</string>
    <string name="preview">Preview</string>
    <string name="pref_long_dismiss">Tap long to dismiss</string>
    <string name="pref_tap_long_summary">Avoid accidentally dismissing the alarm</string>
    <string name="pref_disable_bg">Disable Clock Background</string>
</resources>