<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.bytezap.wobble.preference.CustomListPreference
        android:defaultValue="30"
        android:dialogTitle="@string/pref_increasing_vol_dialog"
        android:entries="@array/increasingVolumeDuration"
        android:entryValues="@array/increasingVolumeValues"
        android:icon="@drawable/ic_volume_plus"
        android:key="prefIncreasingVolume"
        android:title="@string/pref_increasing_vol_title" />

    <com.bytezap.wobble.preference.CustomListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/pref_brightness_dialog"
        android:entries="@array/brightnessDuration"
        android:entryValues="@array/brightnessValues"
        android:icon="@drawable/ic_brightness"
        android:key="prefIncreasingBrightness"
        android:title="@string/pref_brightness" />

    <com.bytezap.wobble.preference.CustomListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/pref_auto_dismiss_dialog_title"
        android:entries="@array/autoDismissDuration"
        android:entryValues="@array/autoDismissValues"
        android:icon="@drawable/ic_alarm_off"
        android:key="prefAutoDismiss"
        android:title="@string/pref_auto_dismiss_title" />

    <com.bytezap.wobble.preference.CustomListPreference
        android:defaultValue="10"
        android:dialogTitle="@string/pref_snooze_dialog_title"
        android:entries="@array/snoozeDuration"
        android:entryValues="@array/snoozeValues"
        android:icon="@drawable/ic_snooze_white"
        android:key="prefSnoozeDuration"
        android:title="@string/pref_snooze_title" />

    <com.bytezap.wobble.preference.VolumeSeekBarPreference
        android:dialogTitle="@string/pref_alarm_volume"
        android:icon="@drawable/ic_volume"
        android:key="prefAlarmVolume"
        android:summary="@string/default_maximum"
        android:title="@string/pref_alarm_volume" />

    <com.bytezap.wobble.preference.CustomListPreference
        android:defaultValue="10"
        android:dialogTitle="@string/pref_wakeup_dialog_title"
        android:entries="@array/wakeupCheckInterval"
        android:entryValues="@array/wakeupcheckIntervalValues"
        android:icon="@drawable/ic_action_clock"
        android:key="prefWakeUpInterval"
        android:title="@string/pref_wakeup_title" />

    <com.bytezap.wobble.preference.CustomListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/pref_volume_key_title"
        android:entries="@array/volume_keys"
        android:entryValues="@array/volume_keys_values"
        android:icon="@drawable/ic_volume_control"
        android:key="prefVolumeKeys"
        android:title="@string/pref_volume_key_title" />

    <com.bytezap.wobble.preference.CustomListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/alarm_background"
        android:entries="@array/alarm_bg"
        android:entryValues="@array/alarm_bg_values"
        android:icon="@drawable/ic_image"
        android:key="prefAlarmBg"
        android:title="@string/alarm_background" />

    <com.bytezap.wobble.preference.CustomCheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_dismiss_2"
        android:key="prefLongDismiss"
        android:title="@string/pref_long_dismiss"
        android:summary="@string/pref_tap_long_summary"
        android:widgetLayout="@layout/check_box_layout" />

    <com.bytezap.wobble.preference.CustomCheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_silent_state"
        android:key="prefSilentMode"
        android:summary="@string/pref_silent_summary"
        android:title="@string/pref_silent_title"
        android:widgetLayout="@layout/check_box_layout" />

    <com.bytezap.wobble.preference.CustomCheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/tab_alarm"
        android:key="prefUpcomingNotif"
        android:title="@string/pref_upcoming_notif"
        android:widgetLayout="@layout/check_box_layout" />

</PreferenceScreen>